# tableau-to-looker-genai-poc

./: .gitignore  README.md  README_OLD.md  agent-2-3-instructions.md  cursor-instructions-md.md  cursor_langgraph_instructions.md  looker_migration_template (1).html  main.py  present.htm  prompt1.txt  prompt2.md  pyproject.toml  sample.txt  tableau_sql_agent_guide.md  test_exploration.py  test_exploration_agent_alone.py  test_file_analysis.py  test_file_analysis_agent_recursive.py  test_file_analysis_and_exploration.py  test_file_analysis_and_exploration_new.py  test_file_analysis_simple.py  test_full_workflow.py  test_parser_troubleshooting.py  test_parsing_agent.py  view_generation_prompt1.txt
.cursor/plans/: table-inference-for-calculated-fields-ca45b4d2.plan.md
agents/: __init__.py  calculation_agent.py  dashboard_agent.py  datasource_agent.py  exploration_agent.py  file_analysis_agent.py  parsing_agent.py  strategy_agent.py  visualization_agent.py
archive/: __init__.py
archive/agents/: exploration_agent_v1.py  file_analysis_agent_v1.py
bi_assessment_accelerator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
config/: __init__.py  complexity_rules.json  complexity_rules.py  feature_catalog.json  settings.py
docs/: complexity_analysis_agent_implementation_plan.md  complexity_analysis_agents_design.md  design_validation.md  design_validation_cognos_microstrategy.md  exploration_agent_design.md  file_analysis_agent_design.md  integration_guide.md  parsing_agent_design.md
dummy_data/: __init__.py  sample_data.py
evaluations/: approach_comparison.html  complexity_analysis_agent.py  complexity_analysis_report.html  complexity_analysis_results.json  complexity_prompts.py  create_data_model.py  json_to_html_report.py  postgresql_approach_success.html  reort_with_validator.py  report_tool_calling.py  report_with_html_agent.py  unified_tableau_workflow.py  xml_to_dict.py  xml_to_dict_agent.py  xml_to_dict_simple_workflow.py  xml_to_dict_v2.py  xml_to_dict_v3.py
examples/: usage.py
generated_dsl/: federated.09t851k1wb86c512yov0h1usonym_connection.dsl  federated.1ch9a7y0y8u6na13bqoak0jg4360_connection.dsl
input_files/cognos/: .gitkeep
input_files/microstrategy/: .gitkeep
input_files/power_bi/: .gitkeep
input_files/tableau/: .gitkeep  metrics_homepage_metadata - Copy.twb  sales_summary_final.xml  text.json  ~metrics_homepage_metadata - Copy__24984.twbr
models/: __init__.py  state.py
prompts/: README.md
prompts/dsl_generation/: connection.txt  dashboard.txt  fields.txt  worksheet.txt
prompts/lookml_generation/: connection_to_lookml.txt  dashboard_to_lookml.txt  fields_to_lookml.txt  worksheet_to_lookml.txt
services/: __init__.py  bigquery_service.py  file_structure_analyzer.py  gcs_service.py  llm_service.py
tableau_analyzer/: README.md  main.py
tableau_analyzer/agents/: __init__.py  agent_1.py  agent_1_enhanced.py  agent_1_master.py  agent_2.py  agent_2_complexity.py  agent_2_schema.py  agent_3.py  agent_3_extractor.py  query_router.py
tableau_analyzer/config/: settings.py  template.py
tableau_analyzer/models/: state.py
tableau_analyzer/tests/: __init__.py  test_agent_1.py  test_agent_1_enhanced.py  test_comprehensive_workflow.py  test_retry_logic.py  test_simple_workflow.py  test_workflow.py
tableau_analyzer/tools/: __init__.py  (+3 more)
tableau_parser/: __init__.py  models.py  parser.py  utils.py
tableau_parser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tableau_sql_agent/: README.md  config.py  main.py  pyproject.toml
tableau_sql_agent/agents/: __init__.py  prompts.py  workflow.py
tableau_sql_agent/database/: __init__.py  db_manager.py
tableau_sql_agent/tools/: __init__.py  json_analyzer.py
tests/: __init__.py  test_agents.py  test_workflow.py
uml/: Agent_Domain_Layer.puml  Layered_archi_.puml  SCOPE_DOCUMENT.md  abc.csv  agent_sequence_diagram.puml  agent_workflow.puml  component_LLD.puml  container_dataflow.puml  context.puml  deployment.puml  director.puml  full_system_container.puml  infra_flow.puml  state_management_flow.puml  test_simple.puml  tool_augumted_agentic.puml
utils/: __init__.py  logger.py  xml_utils.py
workflow/: README.md  __init__.py  config.py  gemini_client.py  move_chunks.py  orchestrator.py  phase1_dsl_generation.py  phase2_lookml_generation.py  phase3_mcp_deployment.py  test_phase1.py  test_phase2.py
workflows/: __init__.py  assessment_workflow.py
(+17 files in other folders)
