[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tableau-parser"
version = "0.1.0"
description = "A parser for Tableau workbook (.twb) files to extract datasource information"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-genai>=0.2.0",
]
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0,<8.0",
]

[tool.setuptools]
packages = ["tableau_parser", "workflow"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]

