[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agents*", "config*", "models*", "services*", "workflows*", "dummy_data*", "utils*", "tests*"]

[project]
name = "bi-assessment-accelerator"
version = "0.1.0"
description = "Multi-agent BI assessment system using LangGraph"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.0.40",
    "anthropic>=0.18.0",
    "google-cloud-bigquery>=3.15.0",
    "google-cloud-storage>=2.14.0",
    "google-cloud-aiplatform>=1.38.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.7.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

