[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agents*", "config*", "models*", "services*", "workflows*", "dummy_data*", "utils*", "tests*", "tableau_analyzer*", "tableau_sql_agent*"]

[project]
name = "bi-assessment-accelerator"
version = "0.1.0"
description = "Multi-agent BI assessment system using LangGraph"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "anthropic>=0.18.0",
    "google-cloud-bigquery>=3.15.0",
    "google-cloud-storage>=2.14.0",
    "google-cloud-aiplatform>=1.70.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.3.0",
    "langchain-google-vertexai>=2.0.0",
    "langchain-community>=0.3.0",
    "beautifulsoup4>=4.12.0",
    "xmltodict>=0.13.0",
    "lxml>=4.9.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.23",
    "genson>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.7.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

